--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="root"></div>
     <script type="module">
-      import { Start, Stop } from "../dist/audio-lines.js";
+      import { Start, Stop } from "./dist/audio-lines.js";
       window.onload = function () {
         Start();
       };
